--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
   <!-- Header -->
 
+<header class="flex-container">
+  <img src="./resources/images/img-tea-cozy-logo.png" />
+  <nav>
+    <span><a href="#mission">Mission</a></span>
+    <span><a href="#store">Featured Tea</a></span>
+    <span><a href="#locations">Locations</a></span>
+  </nav>
+</header>
+
+<!-- Main Content Container -->
+
+
 
 </body>
 </html>
