--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
 
   <!-- Header -->
 
-<header class="flex-container">
-  <img src="./resources/images/img-tea-cozy-logo.png" />
-  <nav>
-    <span><a href="#mission">Mission</a></span>
-    <span><a href="#store">Featured Tea</a></span>
-    <span><a href="#locations">Locations</a></span>
-  </nav>
-</header>
+  <header class="flex-container">
+    <img src="./resources/images/img-tea-cozy-logo.png" />
+    <nav>
+      <span><a href="#mission">Mission</a></span>
+      <span><a href="#store">Featured Tea</a></span>
+      <span><a href="#locations">Locations</a></span>
+    </nav>
+  </header>
 
-<!-- Main Content Container -->
+  <!-- Main Content Container -->
+
+  <div class="main">
+
+    <!-- Mission Section -->
+
+    <div id="mission" class="flex-container">
+      <div class="content">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+
+    <!-- Store Section -->
 
 
 
