--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
 
     <!-- Store Section -->
 
+    <div id="store">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy</h4>
+      <div class="flex-container items">
+        <div class="item">
+          <img src="./resources/images/img-berryblitz.jpg" />
+          <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/img-spiced-rum.jpg" />
+          <span>Spiced Rum Tea</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/img-donut.jpg" />
+          <span>Seasonal Donuts</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/img-myrtle-ave.jpg" />
+          <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/img-bedford-bizarre.jpg" />
+          <span>Bedford Bizarre Tea</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Locations Section -->
+
+    
+
 
 
 </body>
